configs/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: united-atomic-bank-api-service
spec:
  selector:
    app: united-atomic-bank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
