configs/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: united-atomic-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.unitedatomicbank.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: united-atomic-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.unitedatomicbank.com
    secretName: united-atomic-bank-api-cert
